--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gestor de Tareas</title>
-    <link rel="stylesheet" href="./assets/css/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
@@ -82,6 +82,6 @@
     </section>
 </main>
 
-<script src="./assets/js/app.js"></script>
+<script src="app.js"></script>
 </body>
 </html>
